--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,12 @@
 Package: prodlim
 Title: Product Limit Estimation
-Version: 1.0.5
+Version: 1.1.3
 Author: Thomas A. Gerds
-Description: Fast and user friendly nonparametric estimation in censored survival (event history) analysis.
-Depends: R (>= 1.9.1), KernSmooth, survival
+Description: Fast and user friendly nonparametric estimation in
+        censored survival (event history) analysis.
+Depends: R (>= 1.9.1), stats, KernSmooth, survival
 Maintainer: Thomas A. Gerds <tag@biostat.ku.dk>
-License: GPL2
-Packaged: Mon Jul 21 14:31:19 2008; tag
+License: GPL (>= 2)
+Packaged: 2010-01-12 12:16:24 UTC; tag
+Repository: CRAN
+Date/Publication: 2010-01-12 20:18:13
