--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export("Hist",
        "plotIllnessDeathModel",
        ## "plotCompetingRiskModel",
        "backGround",
+       "PercentAxis",
        "quantile.prodlim")
 
 S3method(print,Hist)
@@ -28,7 +29,9 @@ S3method(summary,Hist)
 S3method(plot,Hist)
 S3method(print,neighborhood)
 S3method(print,prodlim)
+S3method(print,quantile.prodlim)
 S3method(summary,prodlim)
+S3method(print,summary.prodlim)
 S3method(predict,prodlim)
 ## S3method(quantile,prodlim)
 S3method(plot,prodlim)
