--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: prodlim
 Title: Product Limit Estimation for event history and survival analysis
-Version: 1.2.9
+Version: 1.3.1
 Author: Thomas A. Gerds
-Description: Fast and user friendly nonparametric estimation in censored survival (event history) analysis.
+Description: Fast and user friendly nonparametric estimation in
+        censored survival (event history) analysis.
 Depends: R (>= 1.9.1), stats, KernSmooth, survival
 Maintainer: Thomas A. Gerds <tag@biostat.ku.dk>
 License: GPL (>= 2)
-Packaged: 2011-12-15 09:04:38 UTC; grb615
+Packaged: 2012-02-14 15:02:50 UTC; grb615
 Repository: CRAN
-Date/Publication: 2011-12-15 10:39:53
+Date/Publication: 2012-02-14 15:35:23
