--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: prodlim
 Title: Product Limit Estimation for event history and survival analysis
-Version: 1.3.1
+Version: 1.3.2
 Author: Thomas A. Gerds
 Description: Fast and user friendly nonparametric estimation in
         censored survival (event history) analysis.
 Depends: R (>= 1.9.1), stats, KernSmooth, survival
+Suggests: lava
 Maintainer: Thomas A. Gerds <tag@biostat.ku.dk>
 License: GPL (>= 2)
-Packaged: 2012-02-14 15:02:50 UTC; grb615
+Packaged: 2012-08-27 14:12:12 UTC; grb615
 Repository: CRAN
-Date/Publication: 2012-02-14 15:35:23
+Date/Publication: 2012-08-27 17:23:46
