--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: prodlim
 Title: Product Limit Estimation for event history and survival analysis
-Version: 1.3.2
+Version: 1.3.3
 Author: Thomas A. Gerds
 Description: Fast and user friendly nonparametric estimation in
         censored survival (event history) analysis.
-Depends: R (>= 1.9.1), stats, KernSmooth, survival
+Depends: R (>= 1.9.1)
+Imports: KernSmooth, survival
 Suggests: lava
 Maintainer: Thomas A. Gerds <tag@biostat.ku.dk>
 License: GPL (>= 2)
-Packaged: 2012-08-27 14:12:12 UTC; grb615
+Packaged: 2013-01-08 09:47:45 UTC; grb615
 Repository: CRAN
-Date/Publication: 2012-08-27 17:23:46
+Date/Publication: 2013-01-08 11:25:23
